# rawtoaces

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  Dockerfile  LICENSES.md  RAWtoACES_CentOS7.docx  RAWtoACES_CentOS7_noyum.docx  README.md  THIRD-PARTY.md  configure.cmake  main.cpp  rawtoACES.VC.VC.opendb  rawtoACES.cpp  rawtoaces.h  usage.h
.github/workflows/: ci.yml  clang-format-check.yml
build_scripts/: install_aces_container.bash  install_deps.bash  install_deps_linux.bash  install_deps_mac.bash  install_deps_windows.bash
cmake/modules/: FindCeres.cmake  FindIlmBase.cmake  Findlibraw.cmake
config/: RAWTOACES.pc.in  RAWTOACESBuildTreeSettings.cmake.in  RAWTOACESConfig.cmake.in  RAWTOACESConfigVersion.cmake.in
data/camera/: Arri_D21_380_780_5  Canon_5D_380_780_5  Canon_S90_380_780_5  Dalsa_380_780_5  Nikon_D200_380_780_5  Nikon_D70_380_780_5  arri_d21_380_780_5.json  canon_5d_380_780_5.json  canon_powershot_s90_380_780_5.json  canon_s90_380_780_5.json  canon_xti_380_780_5  canon_xti_380_780_5.json  dalsa_380_780_5.json  nikon_d200_380_780_5.json  nikon_d5100_380_780_5.json  nikon_d7000_380_780_5  nikon_d7000_380_780_5.json  nikon_d700_380_780_5  nikon_d700_380_780_5.json  nikon_d70_380_780_5.json  red_mx_380_780_5  red_mx_380_780_5.json  sigma_sd1_380_780_5.json  sony_ilce-7rm2_380_780_5.json  sony_ilce-7sm2_380_780_5.json  viper_nofilter1_380_780_5  viper_nofilter1_380_780_5.json  weiscam_na_380_780_5  weiscam_na_380_780_5.json
data/camera/JSON/: arri_d21_380_780_5.json  canon_5d_380_780_5.json  canon_s90_380_780_5.json  nikon_d200_380_780_5.json
data/camera/json/: canon_xti_380_780_5.json  dalsa_380_780_5.json  nikon_d200_380_780_5.json  nikon_d7000_380_780_5.json  nikon_d70_380_780_5.json  viper_nofilter1_380_780_5.json  weiscam_na_380_780_5.json
data/cmf/: cmf_1931  cmf_1931.json
data/illuminant/: 3200k_380_780_5.json  cie15-a_380_780_5  cie15-a_380_780_5.json  cie15-c_380_780_5  cie15-c_380_780_5.json  cie15-d50_380_780_5.json  cie15-d55_380_780_5.json  cie15-d65_380_780_5  cie15-d65_380_780_5.json  cie15-d75_380_780_5.json  d40_380_780_5.json  d45_380_780_5.json  d50_380_780_5  d50_380_780_5.json  d60_380_780_5  d60_380_780_5.json  iso7589_stutung_380_780_5.json
data/illuminant/json/: cie15-d75_380_780_5.json  d50_380_780_5.json  d60_380_780_5.json
data/illuminate/: 3200K_380_780_5  D40_380_780_5  D45_380_780_5  D50_380_780_5  D60_380_780_5  ISO7589-StuTung_380_780_5  ISO7589_StuTung_380_780_5  cie15-d50_380_780_5  cie15-d55_380_780_5  cie15-d75_380_780_5
data/training/: training_spectral  training_spectral.json
data/training/json/: training_spectral.json
include/rawtoaces/: acesrender.h  cache_base.h  define.h  mathOps.h  metadata.h  rawtoaces_util.h  rta.h  usage.h
lib/: CMakeLists.txt  cat.cpp  cat.h  data.h  define.h  idt.cpp  idt.h  mathOps.h  rta.cpp  rta.h
lib/aces_container/: CMakeLists.txt  LICENSE  aces_Writer.cpp  aces_Writer.h  aces_attributestructs.cpp  aces_attributestructs.h  aces_crossplat.h  aces_errors.h  aces_formatter.cpp  aces_formatter.h  aces_genericWriter.h  aces_iostat.cpp  aces_iostat.h  aces_items.h  aces_log.h  aces_md5.cc  aces_md5.hh  aces_timing.cpp  aces_timing.h  aces_types.h  aces_typesAndRationals.cpp  aces_typesAndRationals.h  aces_writeattributes.cpp  aces_writeattributes.h
lib/data/: cmf_193  cmf_1931.txt  training_spectral  training_spectral.txt  training_spectral_test
lib/data/camera/: Arri_D21_380_780_5  Canon_5D_380_780_5  Canon_S90_380_780_5  Canon_XTi_380_780_5  Dalsa_380_780_5  Nikon_D70_380_780_5
lib/half/: CMakelists.txt  half.cpp
lib/libraw/: CMakeLists.txt
rawtoACES/: CMakeLists.txt  rawtoACES.cpp
rawtoaces/: rawtoaces.h
src/: CMakeLists.txt  acesrender.cpp  acesrender.h  rawtoaces.h  usage.h
src/rawtoaces/: CMakeLists.txt
src/rawtoaces2/: CMakeLists.txt  main.cpp
src/rawtoaces_idt/: CMakeLists.txt  rta.cpp
src/rawtoaces_util/: CMakeLists.txt  acesrender.cpp
src/rawtoaces_util2/: CMakeLists.txt  rawtoaces_util.cpp  transform_cache.cpp  transform_cache.h
test/: nikon_d200_380_780_5_test.json
unittest/: CMakeLists.txt  test.cpp  testDNGIdt.cpp  testIDT.cpp  testIllum.cpp  testLogic.cpp  testMath.cpp  testMathOps.cpp  testMisc.cpp  testSI.cpp  testSpst.cpp
unittest/materials/: Nikon_D200_380_780_5_test  nikon_d200_380_780_5_test.json
